--- a/whitepaper-template-0812.tex
+++ b/whitepaper-template-0812.tex
@@ -1,5 +1,5 @@
 
-% TEMPLATE FOR SCIENCE WHITE PAPERS FOR LSST DEEP-DRILLING FIELD OBSERVATIONS
+% TEMPLATE FOR SCIENCE WHITE PAPERS FOR LSST TOO FOLLOW-UP OBSERVATIONS
 % VERSION 1.1
 % 2011 JAN 18
 
@@ -31,7 +31,7 @@
 
 %-------------------------------------------------------------------------------------------
 
-\centerline {\Large Science White Paper for LSST Deep-Drilling Field Observations}
+\centerline {\Large Science White Paper for LSST Target of Opportunity Gravity Wave and High-Energy Neutrino Observations}
 
 \vspace*{0.2 cm}
 
