--- a/whitepaper-template-0812.tex
+++ b/whitepaper-template-0812.tex
@@ -51,8 +51,6 @@
 \noindent 
 {\bf Authors:} {\bf ALPHABETICAL FOR NOW} A. Becker (U Washington),  J. S. Bloom (UC Berkeley), K. Cook (LLNL), Z. Ivezic (U Washington), Mansi Kasliwal (Carnegie), A. Mahabal (Caltech), Samaya Nissanke (Caltech) 
 
-% List the white paper authors here in the format 
-% B.S. Preston (Penn State), T. Logan (Caltech)
 
 \vspace*{0.2 cm}
 
@@ -95,11 +93,11 @@ Discover and characterize the electromagnetic counterparts to gravitational wave
 %   important throughout the period of LSST operations?  
 The EM/gravity wave connection is an active area of theoretical pursuit and it is likely that in the next several years, the expected EM signatures from the panoply of events that gives rise to GW events will become more clear. However, at this stage, we feel it is important for LSST to build in the capability to 1) slew rapidly to a field with little to no prior notice and 2) build in a dynamic cadence capability -- that could last intermittently for days or even weeks --- for these high priority events. The total time commitment of LSST to such a strategy should be small (of order 1 - 3\%) and should depend on the variety of GW/neutrino triggering facilities in existence at the time of the science commissioning. Aside from the scientific rationale for opening up these capabilities we see important programmatic reasons to do so. LSST is essential unique in connecting the GW universe to the EM universe. It could greatly enhance the returns of the NSF-funded LIGO and, given the possibility of using GWs as standard sirens, would be of prime utility for DOE science. Given that this Target of Opportunity Triggering \& Cadencing channel should not impact LSST hardware, we think that opening up this channel for LSST should be seriously considered.
 
-For the vast majority of correlated time-domain science goals, either the nominal LSST cadences will be sufficient or, for events requiring dense and deep sampling, large aperture, small fields of-view facilities will be more appropriate as a followup engine. There are some key Decadal impetuses, however, where the LSST combination of {\bf instantaneous field-of-view, aperture, speed, and wavelength coverage will be critical}. In particular, there is essentially unmatched capabilities of LSST in finding and identifying electromagnetic counterparts to gravity wave and neutrino events. Some of the science cases were articulated in LSST-member-driven whitepapers for Astro2010 (see Bloom et al. 2009 and Kulkarni et al. 2009 and references therein). We summarize here the three main domains of current interest:
+For the vast majority of correlated time-domain science goals, either the nominal LSST cadences will be sufficient or, for events requiring dense and deep sampling, large aperture, small fields of-view facilities will be more appropriate as a followup engine. There are some key Decadal impetuses, however, where the LSST combination of {\bf instantaneous field-of-view, aperture, speed, and wavelength coverage will be critical}. In particular, there is essentially unmatched capabilities of LSST in finding and identifying electromagnetic counterparts to gravity wave and neutrino events. Some of the science cases were articulated in LSST-member-driven whitepapers for Astro2010 (see Bloom et al. 2009 and Kulkarni et al. 2009 and references therein). We summarize here the two main domains of current interest:
 
 \medskip
 
-\noindent {\bf Events from Merging Stellar Mass Remnants:} GW events from NS-NS or NS-BH mergers are expected to be readily detectable by Advanced LIGO (and upgraded VIRGO, the Japanese LCGT etc.). Advanced LIGO, funded by the NSF, is expected come on line a few years before LSST. At advanced sensitivities for a three detector LIGO-Virgo network, predicted event rates (Abadie et al. 2010) 
+\noindent {\bf Events from Merging Stellar Mass Remnants:} GW events from NS-NS or NS-BH mergers are expected to be readily detectable by Advanced LIGO (and upgraded VIRGO, the Japanese KAGRA etc.). Advanced LIGO, funded by the NSF, is expected come on line a few years before LSST. At advanced sensitivities for a three detector LIGO-Virgo network, predicted event rates (Abadie et al. 2010) 
 for: i). NS-NS binaries range from $0.4$ to $40$ per year (with 40 being the ``realistic'' number) detectable up to distances of
 $\sim$several hundred Mpc, ii). NS-10 M$_{\odot}$ binaries range from $0.2$ to $300$ per year (with 10 being the ``realistic'' number) out to distances of $\sim 1-2$ Gpcs, and iii). stellar mass binary black holes (BBH) with total masses $<100 M_{\odot}$ range from $0.4$ to $1000$ per year (with 20 being the ``realistic'' number) detectable up to distances of $\sim$several Gpc. In addition to the GW event masses, the detectable range also depends on the number of detectors, and whether their data streams are analysed coherently. However, the localizations of such events will be poor, where the majority of sources will be detected at threshold. Current estimates are that localizations of 20 - 100 sq. deg (90\% confidence) are achievable (Fairhurst 2010) using a LIGO-Virgo network, and the error regions may be disjoint on the sky (Nissanke et al. 2011). With the addition a fourth or fifth detector in Japan or India to the worldside network, the localizations decrease in size to 5-10 sq. deg (Schutz 2011, Nissanke et al. 2011, Fairhurst 2012). Finding a precise localization via an EM counterpart is critical for breaking degeneracies inherent in the chirp signal (Nissanke et al. 2009) and understanding the nature of the progenitors/surroundings of the event. Importantly, since GW signatures encode luminosity distance but not redshift, an EM counterpart enables the use of such events as precision standard sirens (Schutz 1986, Holz et al. 2005, Dalal et al. 2006). 
 
