Samaya: add tex

--- a/whitepaper-template-0812.tex
+++ b/whitepaper-template-0812.tex
@@ -6,7 +6,7 @@
 %-------------------------------------------------------------------------------------------
 
 \documentclass [11pt]{article}
-\usepackage{psfig}
+%\usepackage{psfig}
 \textwidth 6.55truein
 \textheight 9.3truein
 \pagenumbering{arabic}
@@ -31,7 +31,8 @@
 
 %-------------------------------------------------------------------------------------------
 
-\centerline {\Large Science White Paper for LSST Target of Opportunity Gravity Wave and High-Energy Neutrino Observations}
+\centerline {\Large Science White Paper for LSST TOO}
+%\centerline {\Large Gravity Wave and High-Energy Neutrino Observations}
 
 \vspace*{0.2 cm}
 
