Samaya: add tex

--- a/whitepaper-template-0812.tex
+++ b/whitepaper-template-0812.tex
@@ -6,6 +6,7 @@
 %-------------------------------------------------------------------------------------------
 
 \documentclass [11pt]{article}
+\usepackage{color}
 %\usepackage{psfig}
 \textwidth 6.55truein
 \textheight 9.3truein
@@ -13,6 +14,10 @@
 \oddsidemargin 0truecm
 \topmargin -2.0cm
 \normalbaselines
+
+\newcommand{\samaya}[1]{\textcolor{blue}{[#1]}}
+\newcommand{\ashish}[1]{\textcolor{red}{[#1]}}
+\newcommand{\andy}[1]{\textcolor{green}{[#1]}}
 
 %-------------------------------------------------------------------------------------------
 
@@ -221,13 +226,12 @@ counterpart &        &         &      & + 5--10 epochs  \\
 \section{Other Required or Relevant Observations}
 %Ashish:
 
-Possible information that can go here includes:
+\textcolor{red}{Ashish: Possible information that can go here includes:
 networking of existing resources to collect and use relevant information; 
 existing follow-up networks like CRTS, Gaia, Pan-STARRS, PESSTO, PTF; 
 repositories like Skyalert and VAO's Data Discovery Portal; 
-characterization and classification services
-
-Also a small paragraph on existin ICT undertakings (e.g. efforts outside LSST of EM follow-up of GW events using LIGO-IndIGO data).
+characterization and classification services.
+Also a small paragraph on existing ICT undertakings (e.g. efforts outside LSST of EM follow-up of GW events using LIGO-IndIGO data).}
 
 % Nominal length for this section is about 0.5 pages. 
 
@@ -250,7 +254,7 @@ If a credible EM counterpart is found from among the candidates, observations fr
 
 %-------------------------------------------------------------------------------------------
 
-\section{Specific Needs for LSST and for Deep Drilling}
+\section{Specific Needs for LSST}
 
 % Nominal length for this section is about 0.5 pages. 
 
@@ -265,7 +269,7 @@ If a credible EM counterpart is found from among the candidates, observations fr
 
 We believe that by 2019, LSST may be the only suitable facility for finding new and rapidly changing transient events on 10--100 sq degree to 24--25 magnitude. Since the expectation of the peak of a kilonova at 200--400 Mpc is at this faint level, a ToO channel with LSST is indeed feasible.
 
-\subsection{Need for Deep Drilling}
+\subsection{Impact of Deep Drilling}
 
 % * Explain why the LSST main-survey observations cannot accomplish your
 %   science goals, and thus how your deep-drilling observations advance 
