Samaya: add tex

--- a/whitepaper-template-0812.tex
+++ b/whitepaper-template-0812.tex
@@ -103,8 +103,8 @@ For the vast majority of correlated time-domain science goals, either the nomina
 
 \medskip
 
-\noindent {\bf Events from Merging Stellar Mass Remnants:} GW events from NS-NS or NS-BH mergers are expected to be readily detectable by Advanced LIGO (and upgraded VIRGO, the Japanese KAGRA etc.). Advanced LIGO, funded by the NSF, is expected come on line a few years before LSST. At advanced sensitivities for a three detector LIGO-Virgo network, predicted event rates (Abadie et al. 2010) 
-for: i). NS-NS binaries range from $0.4$ to $40$ per year (with 40 being the ``realistic'' number) detectable up to distances of
+\noindent {\bf Events from Merging Stellar Mass Remnants:} GW events from neutron star (NS)-NS or NS-black hole (BH) mergers are expected to be readily detectable by Advanced LIGO (and upgraded VIRGO, the Japanese KAGRA etc.). Advanced LIGO, funded by the NSF, is expected come on line a few years before LSST. At advanced sensitivities for a three detector LIGO-Virgo network, predicted event rates (Abadie et al. 2010) 
+for: i). NS-NS binaries range from $0.4$ to $400$ per year (with 40 being the ``realistic'' number) detectable up to distances of
 $\sim$several hundred Mpc, ii). NS-10 M$_{\odot}$ binaries range from $0.2$ to $300$ per year (with 10 being the ``realistic'' number) out to distances of $\sim 1-2$ Gpcs, and iii). stellar mass binary black holes (BBH) with total masses $<100 M_{\odot}$ range from $0.4$ to $1000$ per year (with 20 being the ``realistic'' number) detectable up to distances of $\sim$several Gpc. In addition to the GW event masses, the detectable range also depends on the number of detectors, and whether their data streams are analysed coherently. However, the localizations of such events will be poor, where the majority of sources will be detected at threshold. Current estimates are that localizations of 20 - 100 sq. deg (90\% confidence) are achievable (Fairhurst 2010) using a LIGO-Virgo network, and the error regions may be disjoint on the sky (Nissanke et al. 2011). With the addition a fourth or fifth detector in Japan or India to the worldwide network, the localizations decrease in size to 5-10 sq. deg (Schutz 2011, Nissanke et al. 2011, Fairhurst 2012). Finding a precise localization via an EM counterpart is critical for breaking degeneracies inherent in the chirp signal (Nissanke et al. 2009) and understanding the nature of the progenitors/surroundings of the event. Importantly, since GW signatures encode luminosity distance but not redshift, an EM counterpart enables the use of such events as precision standard sirens (Schutz 1986, Holz et al. 2005, Dalal et al. 2006). 
 
 %Independent of the cosmological distance ladder and other systematics that plague traditional standard candles, the possibility of measuring $H_0$ to a few percent accuracy, with only an appeal that General Relativity correctly describes the GW emission and evolution, is a compelling impetus.
