Samaya: add tex

--- a/whitepaper-template-0812.tex
+++ b/whitepaper-template-0812.tex
@@ -167,7 +167,7 @@ N/A
 
 \subsection{Observing Plan, Cadence, Filters, and Expected Depth}
 
-We can expect Advanced LIGO and IceCube triggers to be supplied to followup facilities within a few minutes (right now, the turn around time is 25 minutes and is human-limited). LSST's ability to follow-up a SMBH merger directly results in latency requirements in LISA data transmission (from all three satellites) of $< 6$ hours a week or so prior to the supermassive BH merger.  
+We can expect Advanced LIGO and IceCube triggers to be supplied to followup facilities within a few minutes (right now, the turn around time is 25 minutes and is human-limited).
 
 To find an EM counterpart we need to repeatedly observe the error region on the sky to find a {\it newly varying/transient source}.  Previous characterization of the variability of known sources, such as variable stars, novae, and older supernovae should improve the chances of identifying the counterpart of interest. However, over 50 sq. deg. there are likely to be XXXX new sources of variability ({\bf MANSI}), such as flaring M-dwarfs without quiescent counterparts. It may be many days and several nights of spectroscopic followup of candidates before the ``correct'' candidate is identified. By that time the source would have faded below detection threshold for even the most large aperture telescopes. And so, in this manner, we view {\bf LSST as both as discovery engine and the main follow-up facility of such events}: we simply will not know which light curve to focus on until it is too late. This is obviously a different view of LSST (largely as a discovery engine) than  for many transient events.
 
@@ -333,6 +333,100 @@ The mechanism (or mechanisms) for injection of ``triggers'' for a predefined pro
 %-------------------------------------------------------------------------------------------
 
 \section{References Cited}
+
+\vskip 0.05 in 
+\par\noindent\hangindent=10pt\hangafter=1
+Abadie A. {\it et al.},
+2010, CQG, 27(17), 173001.
+
+\vskip 0.05 in 
+\par\noindent\hangindent=10pt\hangafter=1
+Antares, http://antares.in2p3.fr/ 
+
+\vskip 0.05 in 
+\par\noindent\hangindent=10pt\hangafter=1
+Bloom, J., Holz D.E., Hughes S.A., Menou K. {\it et al.}
+2009, Coordinated Science in the Gravitational and Electromagnetic Skies, Astro2010 Decadal Survey Whitepaper. 
+
+\vskip 0.05 in 
+\par\noindent\hangindent=10pt\hangafter=1
+Cooray A., Farmer A., Seto N.,
+2004, ApJL, 601, L47-L50.
+
+\vskip 0.05 in 
+\par\noindent\hangindent=10pt\hangafter=1
+Dalal N., Holz D.E., Hughes S.A., Jain B., 
+2006, Phys. Rev. D., 74(6), 063006.
+
+\vskip 0.05 in 
+\par\noindent\hangindent=10pt\hangafter=1
+Fairhurst S.,
+2010a, New Journal of Physics, 11(12), 123006.
+
+\vskip 0.05 in 
+\par\noindent\hangindent=10pt\hangafter=1
+Fairhurst, S.,
+2010b, ArXiv e-prints, 1010.6192.
+
+\vskip 0.05 in 
+\par\noindent\hangindent=10pt\hangafter=1
+Holz D.E., Hughes S.A.,
+2005, ApJ 629, 15-22.
+
+\vskip 0.05 in 
+\par\noindent\hangindent=10pt\hangafter=1
+Icecube, http://icecube.wisc.edu
+
+\vskip 0.05 in 
+\par\noindent\hangindent=10pt\hangafter=1
+Kochanek C.S., Piran T.,
+1993, ApJL, 17-20.
+
+\vskip 0.05 in 
+\par\noindent\hangindent=10pt\hangafter=1
+Kulkarni S.R., Kasliwal M.M., 
+2009, Transients in the Local Universe, Astro 2010 Decadal Survey WhitePaper.
+
+\vskip 0.05 in 
+\par\noindent\hangindent=10pt\hangafter=1
+Metzger B.D., Martinez-Pinedo G., Darbha S., Quartaert E., Arcones A.A., Kasen D., Thomas R., Nugent P., Panov I.V., Zinner N.T.  
+2010, MNRAS, 406, 2650.
+
+\vskip 0.05 in 
+\par\noindent\hangindent=10pt\hangafter=1
+Nelemans G., Yungelson L.R., Portegies Zwart S.R.,
+2001, AAP, 375:890--898.
+
+\vskip 0.05 in 
+\par\noindent\hangindent=10pt\hangafter=1
+Nelemans G., Yungelson L.R., Portegies Zwart S.R.,
+2004, MNRAS,  349:181--192.
+
+\vskip 0.05 in 
+\par\noindent\hangindent=10pt\hangafter=1
+Nissanke S.M., Holz D.E., Hughes S.A., Dalal N., Sievers J.L.,
+2010, ApJ 725, 496-514.
+
+\vskip 0.05 in 
+\par\noindent\hangindent=10pt\hangafter=1
+Nissanke S.M., Sievers J.L., Dalal, N, Holz D.E.
+2011, ApJ, 739:99.
+
+\vskip 0.05 in 
+\par\noindent\hangindent=10pt\hangafter=1
+Phinney E.S., 
+2009, Finding and Using Electromagnetic Counterparts of Gravitational Wave Sources, Astro 2010 Decadal Survey WhitePaper.
+
+
+\vskip 0.05 in 
+\par\noindent\hangindent=10pt\hangafter=1
+Schutz B.F.,
+1986,  Nature, 323, 310 - 311.
+
+\vskip 0.05 in 
+\par\noindent\hangindent=10pt\hangafter=1
+Schutz B.F.,
+2011,  ArXiv e-prints, 1102.5421v1.
 
 % EXAMPLE FORMAT FOR REFERENCES
 %
