testing by adding myself as author

--- a/whitepaper-template-0812.tex
+++ b/whitepaper-template-0812.tex
@@ -55,7 +55,7 @@
 \vspace*{0.4 cm}
 
 \noindent 
-{\bf Authors:} {\bf ALPHABETICAL FOR NOW} A. Becker (U Washington),  J. S. Bloom (UC Berkeley), K. Cook (LLNL), Z. Ivezic (U Washington), Mansi Kasliwal (Carnegie), A. Mahabal (Caltech), Samaya Nissanke (Caltech) 
+{\bf Authors:} {\bf ALPHABETICAL FOR NOW} A. Becker (U Washington),  J. S. Bloom (UC Berkeley), K. Cook (LLNL), Z. Ivezic (U Washington), Mansi Kasliwal (Carnegie), A. Mahabal (Caltech), Samaya Nissanke (Caltech), L. M. Walkowicz (Princeton)
 
 
 \vspace*{0.2 cm}
